bk_ida/gccida/g1/dump_sbitmap
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_sbitmap/src/sbitmap.c:1049:17: error: use of undeclared identifier 'off_6376D2'
fprintf( file, &off_6376D2[1], ( bmap->elms[v6] >> v4++) & 1); 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_sbitmap/src/obj/sbitmap.o] Error 1
